--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div id="texto1">Happy Birthday Yosiii<br />
-    ada pesan buat kamu nich <br/><a href="massageforu/index.html">&#128140;</a>
+    ada pesan buat kamu nich <br/>
+    <a href="massageforu/index.html">&#128140;</a>
   </div>
 <div class="flower">
         <div class="f-wrapper">
